##############
## latex2rtf changes from 2.3.0
##############

r1228 | whennings
WH: creating html files in doc/web removed from doc/Makefile in Unix distribution
   (but not in SVN repository)
(Windows l2rshell) Find MikTeX also when that is user installed and not added to PATH

r1227 | whennings
WH: fixed typo in version.h

r1226 | whennings
WH: in graphics.c, fixed incorrect handling of tmp_dir
in latex2png, delete existing output files before conversion

r1225 | whennings
WH: in latex2png, changed parameter in call to xelatex

r1224 | whennings
WH: in graphics.c, adding tmp_path to PutPdfFile and PutPsFile
incremented version to 2.3.2

r1223 | whennings
WH: latex2png script for unix (previous upload was for Windows, sorry)

r1222 | whennings
WH: modified latex2png script to that it also tries xelatex

r1221 | whennings
WH: increased buffer size in parser.c for an extra large \begin{environment} ... \end{environment}

r1220 | whennings
WH: modified latex2png script -
- also try conversion with pdflatex
- in call of ImageMagick convert, changed to "-type TrueColor" for better quality of png bitmaps

r1219 | prahl
update man pages

r1218 | prahl
bump version number of latex2png

r1217 | whennings
WH: graphics.c: fixed bug in "PutEpsFile" (variable eps was undefined)
fixed bug in funct1.c (figure numbers missing with "-F" option, patch tracker no.3537371)
incremented version to 2.3.1

##############
## latex2rtf changes from 2.2.0
##############

r1216 | whennings
WH: graphics.c: added conversion of pdf and ps to eps 
when inserting graphics file names (-E4 -E8 and -E12)
latex2png: added convert parameter "-type PaletteMatte" for eps to png, 
resolving Patches item #3519195
Makefile: fixed wrong default cfg dir in Windows version of Makefile
incremented version to 2.3.0

r1215 | whennings
WH: given that the conflict between -E12 and -M12 options is now fixed,
reactivated -E option in GUI shell and incremented version to 2.2.4

r1214 | prahl